# device-detection-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  build-and-test.yml  wasi-toolchain.cmake
.github/workflows/: nightly-documentation-update.yml  nightly-pipeline-prerelease.yml  nightly-pipeline.yml  nightly-pr-to-main.yml  nightly-prs-to-main.yml  nightly-publish-main.yml  nightly-submodule-update.yml  publish.yml  pull-requests.yml
4.4/: _collection_8hpp_source.html  _collection_config_8hpp_source.html  _component_meta_data_8hpp_source.html  _component_meta_data_builder_hash_8hpp_source.html  _component_meta_data_collection_hash_8hpp_source.html  _config_base_8hpp_source.html  _config_device_detection_8hpp_source.html  _config_hash_8hpp_source.html  _date_8hpp_source.html  _engine_base_8hpp_source.html  _engine_device_detection_8hpp_source.html  _engine_hash_8hpp_source.html  _entity_meta_data_8hpp_source.html  _entity_meta_data_builder_8hpp_source.html  _evidence_base_8hpp_source.html  _evidence_device_detection_8hpp_source.html  _example_base_8hpp_source.html  _exceptions_8hpp_source.html  _fiftyone_degrees_8hpp_source.html  _hash_2_getting_started_8c-example.html  _hash_2_getting_started_8cpp-example.html  _hash_2_match_metrics_8c-example.html  _hash_2_match_metrics_8cpp-example.html  _hash_2_meta_data_8cpp-example.html  _hash_2_offline_processing_8c-example.html  _hash_2_performance_8c-example.html  _hash_2_reload_from_file_8c-example.html  _hash_2_reload_from_file_8cpp-example.html  _hash_2_reload_from_memory_8c-example.html  _hash_2_reload_from_memory_8cpp-example.html  _hash_2_strongly_typed_8c-example.html  _hash_2_strongly_typed_8cpp-example.html  _ip_address_8hpp_source.html  _meta_data_8hpp_source.html  _meta_data_hash_8hpp_source.html  _profile_meta_data_8hpp_source.html  _profile_meta_data_builder_hash_8hpp_source.html  _profile_meta_data_collection_hash_8hpp_source.html  _property_meta_data_8hpp_source.html  _property_meta_data_builder_hash_8hpp_source.html  (+501 more)
4.5/: _2home_2runner_2work_2device-detection-cxx_2device-detection-cxx_2common_2device-detection-cxx_21e3692f87311461160077962a152b42b.html  _2home_2runner_2work_2device-detection-cxx_2device-detection-cxx_2common_2device-detection-cxx_2bb2984964aefeda7a8edcbd4e3c6e478.html  _collection_8hpp_source.html  _collection_config_8hpp_source.html  _component_meta_data_8hpp_source.html  _component_meta_data_builder_hash_8hpp_source.html  _component_meta_data_collection_hash_8hpp_source.html  _config_base_8hpp_source.html  _config_device_detection_8hpp_source.html  _config_hash_8hpp_source.html  _date_8hpp_source.html  _engine_base_8hpp_source.html  _engine_device_detection_8hpp_source.html  _engine_hash_8hpp_source.html  _entity_meta_data_8hpp_source.html  _entity_meta_data_builder_8hpp_source.html  _evidence_base_8hpp_source.html  _evidence_device_detection_8hpp_source.html  _example_base_8hpp_source.html  _exceptions_8hpp_source.html  _fiftyone_degrees_8hpp_source.html  _hash_2_getting_started_8c-example.html  _hash_2_getting_started_8cpp-example.html  _hash_2_match_metrics_8c-example.html  _hash_2_match_metrics_8cpp-example.html  _hash_2_meta_data_8cpp-example.html  _hash_2_offline_processing_8c-example.html  _hash_2_performance_8c-example.html  _hash_2_reload_from_file_8c-example.html  _hash_2_reload_from_file_8cpp-example.html  _hash_2_reload_from_memory_8c-example.html  _hash_2_reload_from_memory_8cpp-example.html  _hash_2_strongly_typed_8c-example.html  _hash_2_strongly_typed_8cpp-example.html  _ip_address_8hpp_source.html  _meta_data_8hpp_source.html  _meta_data_hash_8hpp_source.html  _profile_meta_data_8hpp_source.html  _profile_meta_data_builder_hash_8hpp_source.html  _profile_meta_data_collection_hash_8hpp_source.html  (+526 more)
CodeBlocks/: devicedetection.workspace
CodeBlocks/fiftyone.devicedetection.hash/: fiftyone.devicedetection.hash.cbp
VisualStudio/: DeviceDetection.sln  Example++.Build.props  Example.Build.props
VisualStudio/FiftyOne.DeviceDetection.C/: FiftyOne.DeviceDetection.C.vcxproj  FiftyOne.DeviceDetection.C.vcxproj.filters
VisualStudio/FiftyOne.DeviceDetection.CPP/: FiftyOne.DeviceDetection.CPP.vcxproj  FiftyOne.DeviceDetection.CPP.vcxproj.filters
VisualStudio/FiftyOne.DeviceDetection.Hash.C/: FiftyOne.DeviceDetection.Hash.C.vcxproj  FiftyOne.DeviceDetection.Hash.C.vcxproj.filters
VisualStudio/FiftyOne.DeviceDetection.Hash.Cpp/: FiftyOne.DeviceDetection.Hash.Cpp.vcxproj  FiftyOne.DeviceDetection.Hash.Cpp.vcxproj.filters
VisualStudio/FiftyOne.DeviceDetection.Hash.Tests/: FiftyOne.DeviceDetection.Hash.Tests.vcxproj  FiftyOne.DeviceDetection.Hash.Tests.vcxproj.filters
VisualStudio/FiftyOne.DeviceDetection.Pattern.C/: FiftyOne.DeviceDetection.Pattern.C.vcxproj  (+1 more)
ci/: README.md  build-and-test-dev.yml  build-and-test.yml  build-package-requirements.ps1  build-package.ps1  build-project.ps1  create-tag.yml  deploy.yml  fetch-assets.ps1  get-next-package-version.ps1  install-package.ps1  options.json  run-integration-tests.ps1  run-performance-tests.ps1  run-unit-tests.ps1  setup-environment.ps1  shared-build-and-test-stages.yml  shared-variables.yml
docs/: Doxyfile  DoxygenLayout.xml  tagfile
rust-poc/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
scripts/: build_variables.sh
src/: ConfigDeviceDetection.cpp  ConfigDeviceDetection.hpp  ConfigDeviceDetection.i  EngineDeviceDetection.cpp  EngineDeviceDetection.hpp  EngineDeviceDetection.i  EvidenceDeviceDetection.cpp  EvidenceDeviceDetection.hpp  EvidenceDeviceDetection.i  FiftyoneDegrees.hpp  ResultsDeviceDetection.cpp  ResultsDeviceDetection.hpp  ResultsDeviceDetection.i  Transform.cpp  Transform.hpp  Transform.i  config-dd.h  dataset-dd.c  dataset-dd.h  fiftyone.h  gethighentropyvalues.c  gethighentropyvalues.h  results-dd.c  results-dd.h  transform.c  transform.h  transformc.c
test/: Constants.hpp  EngineDeviceDetectionTests.cpp  EngineDeviceDetectionTests.hpp  EngineDeviceDetectionTestsMacros.hpp  ExampleDeviceDetectionTests.cpp  ExampleDeviceDetectionTests.hpp  main.cpp  pch.h
(+1076 files in other folders)
